# cpp-exchange

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RFC.md  docker-compose.yml  psql.txt
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt  conf.py
include/: config.h  constants.h  dotenv.h
include/communication/: fifo_sequencer.h  lf_queue.h  socket_utils.h  tcp_server.h  tcp_socket.h
include/cpp_exchange/: cpp_exchange.h
include/cppexchange/: config.h  constants.h  cppexchange.h  dotenv.h  helpers.h  messages.h  order.h  order_data_structures.h  orderbook.h  typedefs.h  updates.h
include/cppexchange/db/: db.h  postgresql.h
include/utils/: macros.h  object_pool.h  singleton.h  time_utils.h
source/: cpp_exchange.cpp  cppexchange.cpp
source/cppexchange/: helpers.cpp  orderbook.cpp
source/db/: postgresqp.cpp
source/utils/: time_utils.cpp
standalone/: CMakeLists.txt  socket_example.cpp
standalone/investigation/: alignment.cpp
standalone/source/: main.cpp
test/: CMakeLists.txt
test/include/communication/: fifo_sequencer_test.cpp  lf_queue_test.cpp  socket_utils_test.cpp  tcp_server_client.cpp  tcp_socket_test.cpp
test/include/cppexchange/: cppexchange_test.cpp  order_test.cpp  orderbook_test.cpp  test_order.cpp  test_order_data_structures.cpp  test_orderbook.cpp
test/include/utils/: object_pool_test.cpp  singleton_test.cpp  test_object_pool.cpp
test/source/: greeter.cpp
